# FinanceManager

./: CMakeLists.txt  main.cpp
objects/: Expense.cpp  Expense.h  IBan.cpp  IBan.h  Transaction.cpp  Transaction.h  User.cpp  User.h
provider/: DataProvider.cpp  DataProvider.h  DateProvider.cpp  DateProvider.h  ExpenseProvider.cpp  ExpenseProvider.h  TransactionProvider.cpp  TransactionProvider.h  UIProvider.cpp  UIProvider.h
sql/: DatabaseConfiguration.cpp  DatabaseConfiguration.h
